...
  const MyApp({super.key});

  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      debugShowCheckedModeBanner: false,
      home: LoginPage(),
    );
  }
}

class Homepage extends StatefulWidget {
  const Homepage({super.key});
...
                        padding: const EdgeInsets.only(right: 20),
                        child: Align(
                          alignment: Alignment.bottomRight,
                          child: Padding(
                            padding: const EdgeInsets.all(15.0),
                            child: FloatingActionButton(
                              key: Key("addButton"),
                              onPressed: () {
                                Navigator.push(
                                    context,
                                    MaterialPageRoute(
                                        builder: (context) => InvitationPage(
                                            factoryIndex: _factoryIndex)));
...
                      child: Column(
                        crossAxisAlignment: CrossAxisAlignment.start,
                        children: [
                          Row(
                            children: [
                              const Text(
                                'Minimum Treshold',
                                style: TextStyle(
                                    fontSize: 28, fontWeight: FontWeight.w900),
                              ),
                              const Padding(
                                padding: EdgeInsets.all(8.0),
                                child: Icon(Icons.info_outline),
...
                                      "\nSteam\nPressure",
                                      style: TextStyle(
                                          fontWeight: FontWeight.bold,
                                          fontSize: 20),
                                    ),
                                    Container(
                                      key: Key('SteamPressure'),
                                      height: 50,
                                      width: 150,
                                      decoration: BoxDecoration(
                                        borderRadius: BorderRadius.circular(
                                            20.0), // Adjust the value to change the oval shape
                                        color: Colors.grey[
...
                                        borderRadius: BorderRadius.circular(
                                            20.0), // Adjust the value to change the oval shape
                                        color: Colors.grey[
                                            200], // Adjust the color as needed
                                      ),
                                      child: TextField(
                                        key: Key('SteamFlow'),
                                        decoration: InputDecoration(
                                          contentPadding:
                                              const EdgeInsets.symmetric(
                                                  horizontal: 20.0),
                                          labelText: '22 T/H',
                                          labelStyle: const TextStyle(
...
                                        borderRadius: BorderRadius.circular(
                                            20.0), // Adjust the value to change the oval shape
                                        color: Colors.grey[
                                            200], // Adjust the color as needed
                                      ),
                                      child: TextField(
                                        key: Key('waterLevel'),
                                        decoration: InputDecoration(
                                          contentPadding:
                                              const EdgeInsets.symmetric(
                                                  horizontal: 20.0),
                                          labelText: '53 %',
                                          labelStyle: const TextStyle(
...
                                        borderRadius: BorderRadius.circular(
                                            20.0), // Adjust the value to change the oval shape
                                        color: Colors.grey[
                                            200], // Adjust the color as needed
                                      ),
                                      child: TextField(
                                        key: Key('powerFrequency'),
                                        decoration: InputDecoration(
                                          contentPadding:
                                              const EdgeInsets.symmetric(
                                                  horizontal: 20.0),
                                          labelText: '48 Hz',
                                          labelStyle: const TextStyle(
...
              child: Padding(
                padding: const EdgeInsets.all(8.0),
                child: Row(
                  mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                  children: [
                    GestureDetector(
                      key: Key('factory1'),
                      onTap: () {
                        changeFactoryIndex(0);
                      },
                      child: Padding(
                        padding: const EdgeInsets.only(left: 10.0),
                        child: AnimatedContainer(
...
                            ],
                          ),
                        ),
                      ),
                    ),
                    GestureDetector(
                      key: Key('factory2'),
                      onTap: () {
                        changeFactoryIndex(1);
                      },
                      child: Padding(
                        padding: const EdgeInsets.only(left: 10.0),
                        child: AnimatedContainer(
...
          ],
        ),
      ),
      bottomNavigationBar: BottomNavigationBar(
        items: const [
          BottomNavigationBarItem(
            key: Key("profile"),
            label: '',
            icon: Icon(Icons.person),
          ),
          BottomNavigationBarItem(
            key: Key("home"),
            label: '',
            icon: Icon(Icons.home_outlined),
          ),
          BottomNavigationBarItem(
            key: Key("settings"),
            label: '',
            icon: Icon(Icons.settings),
          ),
        ],
        currentIndex: _selectedIndex,
        onTap: (index) {
...
