...
                    ),
                    Center(
                      child: Row(
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: [
                          ElevatedButton(
                            key: const Key('activationCodeButton'),
                            style: ElevatedButton.styleFrom(
                              foregroundColor: Colors.purple[800],
                              backgroundColor: Colors.purple[50],
                            ),
                            onPressed: () {
                              setState(
...
